# bourbask.github.io

./: .gitignore  .lighthouserc.json  404.html  CNAME  Cargo.toml  LICENSE  Makefile  README.md  Trunk.toml  index.html  sw.js
.cargo/: audit.toml  config.toml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: feature.md
.github/workflows/: ci.yml  deploy.yml  feeds-smoke.yml  fetch-news.yml  news-pipeline.yml  quality.yml  release-tag.yml  synthesize-news.yml  tests.yml  tools-pipeline.yml
blog/: index.html
css/: animations.css  base.css  blog.css  components.css  layout.css  responsive.css  style.css  variables.css
data/: trend_ledger.jsonl
design/: design-system-guide.md  icons-guide.md  logo-guide.md  typo-fougere-guide.md
design/icons/: preview.html
docs/: README.md  architecture.md  deployment.md  design-system.md  dev-setup.md  testing.md  veille-pipeline.md
js/: main.js  script.js
js/config/: settings.js
js/i18n/: en.js  fr.js  i18n-manager.js
js/modules/: animations.js  blog-manager.js  contact-form.js  cv-generator.js  navigation.js  theme-manager.js
js/utils/: helpers.js
public/: bourbasquet-pgp.asc  news.json  robots.txt  sitemap.xml  tools_candidates.json  tools_generated.json
public/css/: 404.css  animations.css  base.css  blog.css  components.css  fonts.css  layout.css  responsive.css  style.css  variables.css  veille.css
public/icons/: site.webmanifest
public/js/: animations.js  fab-interaction.js  push-notifications.js
scripts/: check_feeds.py  discover_tools.py  extract_ledger.py  fetch_news.py  forecast_news.py  generate_article.py  migrate_syntheses.py  notify_push.mjs  pa11y-dark-mode.js  quality_check.sh  repair_synthesis_links.py  requirements.txt  score_articles.py  screenshot.js  screenshot.sh  synthesize_news.py  test_synthesis.py
scripts/tests/: conftest.py  test_extract_ledger.py  test_fetch_news.py  test_forecast_news.py  test_repair_synthesis_links.py  (+2 more)
src/: app.rs  lib.rs
worker/: .gitignore  Cargo.toml  wrangler.toml
(+76 files in other folders)
