[package]
name = "bourbask-portfolio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
web-sys = { version = "0.3", features = [
  "HtmlDocument",
  "Storage",
  "Window",
  "Location",
  "console",
  "Navigator",
  "DomRect",
  "Element",
  "MediaQueryList",
  "DomTokenList",
  "IntersectionObserver",
  "IntersectionObserverEntry",
  "IntersectionObserverInit",
  "Document",
  "HtmlElement",
  "EventTarget",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
chrono = "0.4"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
